Adds wren, updates huskywolf

--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
   </head>
   <body>
     <header class="header" aria-label="Page header">
-      <div class="header__icon"><span class="eye"></span><span class="eye"></span></div>
+      <div class="header__icon">
+        <input id="bird-1" type="checkbox" class="bird" />
+        <label for="bird-1" class="bird__label">
+          <span class="bird__label-text">Click on me to make me fly.</span>
+          <span class="bird__wing"></span>
+          <span class="bird__wing"></span>
+        </label>
+        <span class="eye"></span>
+        <span class="eye"></span>
+      </div>
       <h1 class="header__heading">Eric Huffman - Front-end software engineer and occasional illustrator</h1>
       <nav class="main-menu u-vis-hidden" aria-label="Main menu">
         <ul class="main-menu__list">
